--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           people. ”
         </p>
       </div>
-      <div class="card third">
+      <div class="card fifth">
         <div class="title">
           <img src="images/image-kira.jpg" alt="kira" />
           <div>
