--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
   </head>
   <body>
     <section>
-      <div class="card first">
-        <div class="title">
+      <div class="card card-violet">
+        <div class="card_title">
           <img src="images/image-daniel.jpg" alt="daniel" />
           <div>
             <h4 class="text_light">Daniel Clifford</h4>
             <h5 class="text_light50">Verified Graduate</h5>
           </div>
         </div>
-        <p class="info text_light">
+        <p class="card_info text_light">
           I received a job offer mid-course, and the subjects I learned were
           current, if not more so, in the company I joined. I honestly feel I
           got every penny’s worth.
         </p>
 
-        <p class="quote text_light50">
+        <p class="card_quote text_light50">
           “ I was an EMT for many years before I joined the bootcamp. I’ve been
           looking to make a transition and have heard some people who had an
           amazing experience here. I signed up for the free intro course and
@@ -55,53 +55,53 @@
           a Software Engineer at a VR startup. ”
         </p>
       </div>
-      <div class="card second">
-        <div class="title">
+      <div class="card card-dkgreysblue">
+        <div class="card_title">
           <img src="images/image-jonathan.jpg" alt="jonathan" />
           <div>
             <h4 class="text_light">Jonathan Walters</h4>
             <h5 class="text_light50">Verified Graduate</h5>
           </div>
         </div>
-        <p class="info text_light">
+        <p class="card_info text_light">
           The team was very supportive and kept me motivated
         </p>
-        <p class="quote text_light50">
+        <p class="card_quote text_light50">
           “ I started as a total newbie with virtually no coding skills. I now
           work as a mobile engineer for a big company. This was one of the best
           investments I’ve made in myself. ”
         </p>
       </div>
-      <div class="card third">
-        <div class="title">
+      <div class="card card-white">
+        <div class="card_title">
           <img src="images/image-jeanette.jpg" alt="jeanette" />
           <div>
             <h4 class="text_dark">Jeanette Harmon</h4>
             <h5 class="text_dark50">Verified Graduate</h5>
           </div>
         </div>
-        <p class="info text_dark">
+        <p class="card_info text_dark">
           An overall wonderful and rewarding experience
         </p>
-        <p class="quote text_dark50">
+        <p class="card_quote text_dark50">
           “ Thank you for the wonderful experience! I now have a job I really
           enjoy, and make a good living while doing something I love. ”
         </p>
       </div>
-      <div class="card fourth">
-        <div class="title">
+      <div class="card card-black">
+        <div class="card_title">
           <img src="images/image-patrick.jpg" alt="patrick" />
           <div>
             <h4 class="text_light">Patrick Abrams</h4>
             <h5 class="text_light50">Verified Graduate</h5>
           </div>
         </div>
-        <p class="info text_light">
+        <p class="card_info text_light">
           Awesome teaching support from TAs who did the bootcamp themselves.
           Getting guidance from them and learning from their experiences was
           easy.
         </p>
-        <p class="quote text_light50">
+        <p class="card_quote text_light50">
           “ The staff seem genuinely concerned about my progress which I find
           really refreshing. The program gave me the confidence necessary to be
           able to go out in the world and present myself as a capable junior
@@ -110,18 +110,18 @@
           people. ”
         </p>
       </div>
-      <div class="card fifth">
-        <div class="title">
+      <div class="card card-white card-white--2">
+        <div class="card_title">
           <img src="images/image-kira.jpg" alt="kira" />
           <div>
             <h4 class="text_dark">Kira Whittle</h4>
             <h5 class="text_dark50">Verified Graduate</h5>
           </div>
         </div>
-        <p class="info text_dark">
+        <p class="card_info text_dark">
           Such a life-changing experience. Highly recommended!
         </p>
-        <p class="quote text_dark50">
+        <p class="card_quote text_dark50">
           “ Before joining the bootcamp, I’ve never written a line of code. I
           needed some structure from professionals who can help me learn
           programming step by step. I was encouraged to enroll by a former
