--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Frontend Mentor | [Challenge Name Here]</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
