Refactor scss. Added mixin to create card style

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
   </head>
   <body>
     <section>
-      <div class="card card-violet">
+      <div class="card-violet">
         <div class="card_title">
           <img src="images/image-daniel.jpg" alt="daniel" />
           <div>
-            <h4 class="text_light">Daniel Clifford</h4>
-            <h5 class="text_light50">Verified Graduate</h5>
+            <h4>Daniel Clifford</h4>
+            <h5>Verified Graduate</h5>
           </div>
         </div>
         <p class="card_info text_light">
@@ -55,12 +55,12 @@
           a Software Engineer at a VR startup. ”
         </p>
       </div>
-      <div class="card card-dkgreysblue">
+      <div class="card-dkgreysblue">
         <div class="card_title">
           <img src="images/image-jonathan.jpg" alt="jonathan" />
           <div>
-            <h4 class="text_light">Jonathan Walters</h4>
-            <h5 class="text_light50">Verified Graduate</h5>
+            <h4>Jonathan Walters</h4>
+            <h5>Verified Graduate</h5>
           </div>
         </div>
         <p class="card_info text_light">
@@ -72,12 +72,12 @@
           investments I’ve made in myself. ”
         </p>
       </div>
-      <div class="card card-white">
+      <div class="card-white">
         <div class="card_title">
           <img src="images/image-jeanette.jpg" alt="jeanette" />
           <div>
-            <h4 class="text_dark">Jeanette Harmon</h4>
-            <h5 class="text_dark50">Verified Graduate</h5>
+            <h4>Jeanette Harmon</h4>
+            <h5>Verified Graduate</h5>
           </div>
         </div>
         <p class="card_info text_dark">
@@ -88,12 +88,12 @@
           enjoy, and make a good living while doing something I love. ”
         </p>
       </div>
-      <div class="card card-black">
+      <div class="card-black">
         <div class="card_title">
           <img src="images/image-patrick.jpg" alt="patrick" />
           <div>
-            <h4 class="text_light">Patrick Abrams</h4>
-            <h5 class="text_light50">Verified Graduate</h5>
+            <h4>Patrick Abrams</h4>
+            <h5>Verified Graduate</h5>
           </div>
         </div>
         <p class="card_info text_light">
@@ -110,12 +110,12 @@
           people. ”
         </p>
       </div>
-      <div class="card card-white card-white--2">
+      <div class="card-white--2">
         <div class="card_title">
           <img src="images/image-kira.jpg" alt="kira" />
           <div>
-            <h4 class="text_dark">Kira Whittle</h4>
-            <h5 class="text_dark50">Verified Graduate</h5>
+            <h4>Kira Whittle</h4>
+            <h5>Verified Graduate</h5>
           </div>
         </div>
         <p class="card_info text_dark">
